--- a/angular2/src/index.html
+++ b/angular2/src/index.html
@@ -1,18 +1,26 @@
 <!Doctype html>
 <html>
 
-	<head>
-		<meta charset="utf-8">
-		<title>Devotee Management</title>
-		<base href="/">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" type="image/x-icon" href="favicon.ico">
-		<link rel="stylesheet" href="https://code.getmdl.io/1.2.1/material.green-deep_orange.min.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	</head>
+<head>
+    <meta charset="utf-8">
+    <title>Devotee Management</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="stylesheet" href="static/bootstrap-4.0.0-alpha.5-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-flex.min.css">
+    <link rel="stylesheet" href="static/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="static/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-reboot.min.css">
+    <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 
-	<body>
-		<app-root>Loading...</app-root>
-	</body>
+    <script src="static/jquery/jquery-3.1.1.min.js"></script>
+    <script src="static/bootstrap-4.0.0-alpha.5-dist/js/bootstrap.min.js"></script>
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js" integrity="sha384-BLiI7JTZm+JWlgKa0M0kGRpJbF2J8q+qreVrKBC47e3K6BW78kGLrCkeRX6I9RoK" crossorigin="anonymous"></script>-->
+</head>
+
+<body>
+    <app-root>Loading...</app-root>
+</body>
 
 </html>
