--- a/angular2/src/index.html
+++ b/angular2/src/index.html
@@ -7,15 +7,15 @@
     <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="stylesheet" href="static/bootstrap-4.0.0-alpha.5-dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-flex.min.css">
-    <link rel="stylesheet" href="static/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="static/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-reboot.min.css">
-	<link rel="stylesheet" href="static/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/bootstrap-4.0.0-alpha.5-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-flex.min.css">
+    <link rel="stylesheet" href="assets/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="assets/bootstrap-4.0.0-alpha.5-dist/css/bootstrap-reboot.min.css">
+    <link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
 
-    <script src="static/jquery/jquery-3.1.1.min.js"></script>
-    <script src="static/bootstrap-4.0.0-alpha.5-dist/js/bootstrap.min.js"></script>
+    <script src="assets/jquery/jquery-3.1.1.min.js"></script>
+    <script src="assets/bootstrap-4.0.0-alpha.5-dist/js/bootstrap.min.js"></script>
 </head>
 
 <body>
